--- a/examples/cli_example_app/dumbjuice.conf
+++ b/examples/cli_example_app/dumbjuice.conf
@@ -1,1 +1,1 @@
-{"program_name":"example_app","python_version":"3.11.7","gui":false}
+{"program_name":"cli_example_app","python_version":"3.11.7","gui":false}
