--- a/examples/gui_example_app/dumbjuice.conf
+++ b/examples/gui_example_app/dumbjuice.conf
@@ -1,1 +1,1 @@
-{"program_name":"gui_example_app","python_version":"3.11.8","gui":true}
+{"program_name":"gui_example_app","python_version":"3.11.8","gui":true,"addins":["ffmpeg","failure"]}
